git-svn-id: https://culturegraph.svn.sourceforge.net/svnroot/culturegraph/trunk/org.culturegraph.metamorph@310 c94b853d-e81a-4a99-bfbf-77374e1f4532

--- a/pom.xml
+++ b/pom.xml
@@ -133,13 +133,13 @@
 		</dependency>
 
 		<!-- Json -->
-		<dependency>
-			<groupId>org.codehaus.jackson</groupId>
-			<artifactId>jackson-core-lgpl</artifactId>
-			<version>1.7.4</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.codehaus.jackson</groupId> -->
+<!-- 			<artifactId>jackson-core-lgpl</artifactId> -->
+<!-- 			<version>1.7.4</version> -->
+<!-- 			<type>jar</type> -->
+<!-- 			<scope>compile</scope> -->
+<!-- 		</dependency> -->
 
 		<!-- Logging -->
 
@@ -169,7 +169,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 	</dependencies>
 
 </project>
