--- a/pom.xml
+++ b/pom.xml
@@ -134,12 +134,12 @@
 			<scope>compile</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.marc4j</groupId>
-			<artifactId>marc4j</artifactId>
-			<version>2.4</version>
-			<scope>compile</scope>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.marc4j</groupId> -->
+<!-- 			<artifactId>marc4j</artifactId> -->
+<!-- 			<version>2.4</version> -->
+<!-- 			<scope>compile</scope> -->
+<!-- 		</dependency> -->
 
 		<!-- Testing -->
 		<dependency>
