--- a/pom.xml
+++ b/pom.xml
@@ -127,12 +127,12 @@
 	</build>
 	<dependencies>
 
-		<dependency>
-			<groupId>de.dnb</groupId>
-			<artifactId>charsets</artifactId>
-			<version>1.2.20</version>
-			<scope>compile</scope>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>de.dnb</groupId> -->
+<!-- 			<artifactId>charsets</artifactId> -->
+<!-- 			<version>1.2.20</version> -->
+<!-- 			<scope>compile</scope> -->
+<!-- 		</dependency> -->
 
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.marc4j</groupId> -->
