--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,13 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>com.hp.hpl.jena</groupId>
+			<artifactId>jena</artifactId>
+			<version>2.6.4</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 </project>
