--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,8 @@
 				<artifactId>findbugs-maven-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
+					<threshold>High</threshold>
+
 					<findbugsXmlOutput>true</findbugsXmlOutput>
 				</configuration>
 				<executions>
@@ -127,19 +129,19 @@
 	</build>
 	<dependencies>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>de.dnb</groupId> -->
-<!-- 			<artifactId>charsets</artifactId> -->
-<!-- 			<version>1.2.20</version> -->
-<!-- 			<scope>compile</scope> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>de.dnb</groupId> -->
+		<!-- <artifactId>charsets</artifactId> -->
+		<!-- <version>1.2.20</version> -->
+		<!-- <scope>compile</scope> -->
+		<!-- </dependency> -->
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.marc4j</groupId> -->
-<!-- 			<artifactId>marc4j</artifactId> -->
-<!-- 			<version>2.4</version> -->
-<!-- 			<scope>compile</scope> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.marc4j</groupId> -->
+		<!-- <artifactId>marc4j</artifactId> -->
+		<!-- <version>2.4</version> -->
+		<!-- <scope>compile</scope> -->
+		<!-- </dependency> -->
 
 		<!-- Testing -->
 		<dependency>
