--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,12 @@
 		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
 	</properties>
 
-	<repositories>
-		<repository>
-			<id>project_internal</id>
-			<url>file://${basedir}/lib</url>
-		</repository>
-	</repositories>
+<!-- 	<repositories> -->
+<!-- 		<repository> -->
+<!-- 			<id>project_internal</id> -->
+<!-- 			<url>file://${basedir}/lib</url> -->
+<!-- 		</repository> -->
+<!-- 	</repositories> -->
 
 	<build>
 		<plugins>
@@ -42,7 +42,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifest>
-							<mainClass>org.culturegraph.metamorph.Morph</mainClass>
+							<mainClass>org.culturegraph.metamorph.Read</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
