major refactoring CGEntity Reader&Writer added
git-svn-id: https://culturegraph.svn.sourceforge.net/svnroot/culturegraph/metamorph/branch/release@586 c94b853d-e81a-4a99-bfbf-77374e1f4532

--- a/src/main/resources/metamorph-readers.properties
+++ b/src/main/resources/metamorph-readers.properties
@@ -1,3 +1,4 @@
-pica=org.culturegraph.metamorph.readers.PicaReader
-mab2=org.culturegraph.metamorph.readers.MabReader
-marc21=org.culturegraph.metamorph.readers.MarcReader
+pica=org.culturegraph.metamorph.stream.readers.PicaReader
+mab2=org.culturegraph.metamorph.stream.readers.MabReader
+marc21=org.culturegraph.metamorph.stream.readers.MarcReader
+cge=org.culturegraph.metamorph.stream.readers.CGEntityReader
