--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,8 @@
-#Wed Aug 10 15:58:59 CEST 2011
+#Mon Dec 05 17:51:51 CET 2011
 eclipse.preferences.version=1
+encoding//src/main/java=UTF-8
+encoding//src/main/resources=UTF-8
+encoding//src/test/java=UTF-8
+encoding//src/test/resources=UTF-8
 encoding//src/test/resources/PND_10entries.pica=UTF-8
+encoding/<project>=UTF-8
