--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
-#Wed Aug 10 15:58:59 CEST 2011
+#Thu Jan 12 16:59:43 CET 2012
 eclipse.preferences.version=1
 encoding//src/test/resources/PND_10entries.pica=UTF-8
