git-svn-id: https://culturegraph.svn.sourceforge.net/svnroot/culturegraph/metamorph/trunk@859 c94b853d-e81a-4a99-bfbf-77374e1f4532

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,8 @@
-#Thu Jan 12 16:59:43 CET 2012
+#Mon Dec 05 17:51:51 CET 2011
 eclipse.preferences.version=1
+encoding//src/main/java=UTF-8
+encoding//src/main/resources=UTF-8
+encoding//src/test/java=UTF-8
+encoding//src/test/resources=UTF-8
 encoding//src/test/resources/PND_10entries.pica=UTF-8
+encoding/<project>=UTF-8
