--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<!-- </parent> -->
 	<groupId>org.culturegraph</groupId>
 	<artifactId>metamorph</artifactId>
-	<version>0.3-SNAPSHOT</version>
+	<version>0.3</version>
 	<name>Metamorph, Transformation Language for Metadata</name>
 
 	<properties>
