--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,7 +1,8 @@
-#Mon Dec 05 18:18:54 CET 2011
+#Mon Jan 23 15:00:03 CET 2012
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/resources/metamorph-test.xsd=UTF8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
 encoding//src/test/resources/PND_10entries.pica=UTF-8
