--- a/src/main/resources/metamorph-readers.properties
+++ b/src/main/resources/metamorph-readers.properties
@@ -1,4 +1,8 @@
-pica=org.culturegraph.metamorph.stream.readers.PicaReader
-mab2=org.culturegraph.metamorph.stream.readers.MabReader
-marc21=org.culturegraph.metamorph.stream.readers.MarcReader
-cge=org.culturegraph.metamorph.stream.readers.CGEntityReader
+pica org.culturegraph.metamorph.stream.readers.PicaReader
+mab2 org.culturegraph.metamorph.stream.readers.MabReader
+marc21 org.culturegraph.metamorph.stream.readers.MarcReader
+cge org.culturegraph.metamorph.stream.readers.CGEntityReader
+
+text/x-pica org.culturegraph.metamorph.stream.readers.PicaReader
+text/x-cg+xml org.culturegraph.metamorph.stream.readers.CGXmlReader
+application/x-cgentity org.culturegraph.metamorph.stream.readers.CGEntityReader
