--- a/src/main/resources/metamorph-readers.properties
+++ b/src/main/resources/metamorph-readers.properties
@@ -4,5 +4,7 @@ marc21 org.culturegraph.metamorph.stream.readers.MarcReader
 cge org.culturegraph.metamorph.stream.readers.CGEntityReader
 
 text/x-pica org.culturegraph.metamorph.stream.readers.PicaReader
+text/x-mab2 org.culturegraph.metamorph.stream.readers.MabReader
+text/x-marc21 org.culturegraph.metamorph.stream.readers.MarcReader
 text/x-cg+xml org.culturegraph.metamorph.stream.readers.CGXmlReader
 application/x-cgentity org.culturegraph.metamorph.stream.readers.CGEntityReader
