--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,12 @@
 			<version>1.6.4</version>
 		</dependency>
 
+<!-- 		<dependency> -->
+<!-- 			<groupId>xerces</groupId> -->
+<!-- 			<artifactId>xercesImpl</artifactId> -->
+<!-- 			<version>2.10.0</version> -->
+<!-- 		</dependency> -->
+
 	</dependencies>
 
 	<build>
