--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,18 @@
 			<version>1.6.4</version>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>xerces</groupId> -->
-<!-- 			<artifactId>xercesImpl</artifactId> -->
-<!-- 			<version>2.10.0</version> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.3</version>
+		</dependency>
+
+
+		<!-- <dependency> -->
+		<!-- <groupId>xerces</groupId> -->
+		<!-- <artifactId>xercesImpl</artifactId> -->
+		<!-- <version>2.10.0</version> -->
+		<!-- </dependency> -->
 
 	</dependencies>
 
