git-svn-id: https://culturegraph.svn.sourceforge.net/svnroot/culturegraph/metamorph/branches/release@1068 c94b853d-e81a-4a99-bfbf-77374e1f4532

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>org.culturegraph</groupId>
 	<artifactId>metamorph</artifactId>
 
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 
 	<name>Metamorph, Transformation Language for Metadata</name>
 
