--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>org.culturegraph</groupId>
 	<artifactId>metamorph</artifactId>
 
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 
 	<name>Metamorph, Transformation Language for Metadata</name>
 
