git-svn-id: https://culturegraph.svn.sourceforge.net/svnroot/culturegraph/metamorph/branches/release@1134 c94b853d-e81a-4a99-bfbf-77374e1f4532

--- a/src/main/resources/metamorph-functions.properties
+++ b/src/main/resources/metamorph-functions.properties
@@ -19,3 +19,4 @@ constant org.culturegraph.metamorph.core.functions.Constant
 count org.culturegraph.metamorph.core.functions.Count
 buffer org.culturegraph.metamorph.core.functions.Buffer
 get-name org.culturegraph.metamorph.core.functions.GetName
+unique org.culturegraph.metamorph.core.functions.Unique
