started removing classes which are now provided by metastream
git-svn-id: https://culturegraph.svn.sourceforge.net/svnroot/culturegraph/metamorph/branches/metamorph-stream@1158 c94b853d-e81a-4a99-bfbf-77374e1f4532

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
 		<!-- <version>2.10.0</version> -->
 		<!-- </dependency> -->
 
+		<dependency>
+			<groupId>org.culturegraph</groupId>
+			<artifactId>metastream</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
