finished removing classes which are now provided by metastream
git-svn-id: https://culturegraph.svn.sourceforge.net/svnroot/culturegraph/metamorph/branches/metamorph-stream@1184 c94b853d-e81a-4a99-bfbf-77374e1f4532

--- a/src/main/resources/metamorph-readers.properties
+++ b/src/main/resources/metamorph-readers.properties
@@ -6,5 +6,5 @@ cge org.culturegraph.metamorph.stream.readers.CGEntityReader
 text/x-pica org.culturegraph.metamorph.stream.readers.PicaReader
 text/x-mab2 org.culturegraph.metamorph.stream.readers.MabReader
 text/x-marc21 org.culturegraph.metamorph.stream.readers.MarcReader
-text/x-cg+xml org.culturegraph.metamorph.stream.readers.CGXmlReader
+text/x-cg+xml org.culturegraph.metamorph.stream.readers.CGXMLReader
 application/x-cgentity org.culturegraph.metamorph.stream.readers.CGEntityReader
