--- a/src/main/resources/metamorph-functions.properties
+++ b/src/main/resources/metamorph-functions.properties
@@ -20,3 +20,4 @@ count org.culturegraph.metamorph.core.functions.Count
 buffer org.culturegraph.metamorph.core.functions.Buffer
 get-name org.culturegraph.metamorph.core.functions.GetName
 unique org.culturegraph.metamorph.core.functions.Unique
+script org.culturegraph.metamorph.core.functions.Script
