- Added support for trailing wildcards in <data source=""> - Added efficient setreplace function - extended test cases - RecordBuffer made more efficient - minor refactoring
git-svn-id: https://culturegraph.svn.sourceforge.net/svnroot/culturegraph/metamorph/branches/release@1262 c94b853d-e81a-4a99-bfbf-77374e1f4532

--- a/src/main/resources/metamorph-functions.properties
+++ b/src/main/resources/metamorph-functions.properties
@@ -21,3 +21,4 @@ buffer org.culturegraph.metamorph.core.functions.Buffer
 get-name org.culturegraph.metamorph.core.functions.GetName
 unique org.culturegraph.metamorph.core.functions.Unique
 script org.culturegraph.metamorph.core.functions.Script
+setreplace org.culturegraph.metamorph.core.functions.SetReplace
