--- a/src/main/resources/metamorph-readers.properties
+++ b/src/main/resources/metamorph-readers.properties
@@ -1,9 +1,11 @@
 pica org.culturegraph.metamorph.stream.readers.PicaReader
 mab2 org.culturegraph.metamorph.stream.readers.MabReader
 marc21 org.culturegraph.metamorph.stream.readers.MarcReader
+mrc org.culturegraph.metamorph.stream.readers.MarcReader
 cge org.culturegraph.metamorph.stream.readers.CGEntityReader
 metsmods org.culturegraph.metamorph.stream.readers.MetsModsReader
 lido org.culturegraph.metamorph.stream.readers.LidoReader
+mrcxml org.culturegraph.metamorph.stream.readers.MarcXMLReader
 
 text/x-pica org.culturegraph.metamorph.stream.readers.PicaReader
 text/x-mab2 org.culturegraph.metamorph.stream.readers.MabReader
