moved util classes to metastream
git-svn-id: https://culturegraph.svn.sourceforge.net/svnroot/culturegraph/metamorph/trunk@1316 c94b853d-e81a-4a99-bfbf-77374e1f4532

--- a/src/main/resources/metamorph-readers.properties
+++ b/src/main/resources/metamorph-readers.properties
@@ -6,6 +6,7 @@ cge org.culturegraph.metamorph.stream.readers.CGEntityReader
 metsmods org.culturegraph.metamorph.stream.readers.MetsModsReader
 lido org.culturegraph.metamorph.stream.readers.LidoReader
 mrcxml org.culturegraph.metamorph.stream.readers.MarcXMLReader
+xml org.culturegraph.metamorph.stream.readers.CGXMLReader
 
 text/x-pica org.culturegraph.metamorph.stream.readers.PicaReader
 text/x-mab2 org.culturegraph.metamorph.stream.readers.MabReader
