--- a/src/main/resources/metamorph-readers.properties
+++ b/src/main/resources/metamorph-readers.properties
@@ -1,15 +1,15 @@
-pica org.culturegraph.metamorph.stream.readers.PicaReader
-mab2 org.culturegraph.metamorph.stream.readers.MabReader
-marc21 org.culturegraph.metamorph.stream.readers.MarcReader
-mrc org.culturegraph.metamorph.stream.readers.MarcReader
-cge org.culturegraph.metamorph.stream.readers.CGEntityReader
-metsmods org.culturegraph.metamorph.stream.readers.MetsModsReader
-lido org.culturegraph.metamorph.stream.readers.LidoReader
-mrcxml org.culturegraph.metamorph.stream.readers.MarcXMLReader
-xml org.culturegraph.metamorph.stream.readers.CGXMLReader
+pica org.culturegraph.metamorph.reader.PicaReader
+mab2 org.culturegraph.metamorph.reader.MabReader
+marc21 org.culturegraph.metamorph.reader.MarcReader
+mrc org.culturegraph.metamorph.reader.MarcReader
+cge org.culturegraph.metamorph.reader.CGEntityReader
+metsmods org.culturegraph.metamorph.reader.MetsModsReader
+lido org.culturegraph.metamorph.reader.LidoReader
+mrcxml org.culturegraph.metamorph.reader.MarcXMLReader
+xml org.culturegraph.metamorph.reader.CGXMLReader
 
-text/x-pica org.culturegraph.metamorph.stream.readers.PicaReader
-text/x-mab2 org.culturegraph.metamorph.stream.readers.MabReader
-text/x-marc21 org.culturegraph.metamorph.stream.readers.MarcReader
-text/x-cg+xml org.culturegraph.metamorph.stream.readers.CGXMLReader
-application/x-cgentity org.culturegraph.metamorph.stream.readers.CGEntityReader
+text/x-pica org.culturegraph.metamorph.reader.PicaReader
+text/x-mab2 org.culturegraph.metamorph.reader.MabReader
+text/x-marc21 org.culturegraph.metamorph.reader.MarcReader
+text/x-cg+xml org.culturegraph.metamorph.reader.CGXMLReader
+application/x-cgentity org.culturegraph.metamorph.reader.CGEntityReader
