refactored class names
git-svn-id: https://culturegraph.svn.sourceforge.net/svnroot/culturegraph/metamorph/trunk@1383 c94b853d-e81a-4a99-bfbf-77374e1f4532

--- a/src/main/resources/metamorph-readers.properties
+++ b/src/main/resources/metamorph-readers.properties
@@ -5,11 +5,12 @@ mrc org.culturegraph.metamorph.reader.MarcReader
 cge org.culturegraph.metamorph.reader.CGEntityReader
 metsmods org.culturegraph.metamorph.reader.MetsModsReader
 lido org.culturegraph.metamorph.reader.LidoReader
-mrcxml org.culturegraph.metamorph.reader.MarcXMLReader
-xml org.culturegraph.metamorph.reader.CGXMLReader
+marcxml org.culturegraph.metamorph.reader.MarcXmlReader
+cgxml org.culturegraph.metamorph.reader.CGXmlReader
+xml org.culturegraph.metamorph.reader.GenericXmlReader
 
 text/x-pica org.culturegraph.metamorph.reader.PicaReader
 text/x-mab2 org.culturegraph.metamorph.reader.MabReader
 text/x-marc21 org.culturegraph.metamorph.reader.MarcReader
-text/x-cg+xml org.culturegraph.metamorph.reader.CGXMLReader
+text/x-cg+xml org.culturegraph.metamorph.reader.CGXmlReader
 application/x-cgentity org.culturegraph.metamorph.reader.CGEntityReader
