--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,7 @@
 
 	<profiles>
 		<profile>
-			<id>jenkins</id>
+			<id>hudson</id>
 			<activation>
 				<property>
 					<name>BUILD_NUMBER</name>
