tuples collector added
git-svn-id: https://culturegraph.svn.sourceforge.net/svnroot/culturegraph/metamorph/trunk@1526 c94b853d-e81a-4a99-bfbf-77374e1f4532

--- a/src/main/resources/metamorph-collectors.properties
+++ b/src/main/resources/metamorph-collectors.properties
@@ -3,3 +3,4 @@ choose org.culturegraph.metamorph.core.collectors.Choose
 group org.culturegraph.metamorph.core.collectors.Group
 entity org.culturegraph.metamorph.core.collectors.Entity
 concat org.culturegraph.metamorph.core.collectors.Concat
+tuples org.culturegraph.metamorph.core.collectors.Tuples
