Typo in Occurrence tag corrected GetName changed to SwitchNameValue Logic in Count simplified (see unit tests) Choose changed to accept latest value with highest priority (not first) bug in SetReplace fixed
git-svn-id: https://culturegraph.svn.sourceforge.net/svnroot/culturegraph/metamorph/trunk@1583 c94b853d-e81a-4a99-bfbf-77374e1f4532

--- a/src/main/resources/metamorph-functions.properties
+++ b/src/main/resources/metamorph-functions.properties
@@ -14,11 +14,11 @@ trim org.culturegraph.metamorph.core.functions.Trim
 normalize-utf8 org.culturegraph.metamorph.core.functions.NormalizeUTF8
 urlencode org.culturegraph.metamorph.core.functions.URLEncode
 split org.culturegraph.metamorph.core.functions.Split
-occurence org.culturegraph.metamorph.core.functions.Occurence
+occurrence org.culturegraph.metamorph.core.functions.Occurrence
 constant org.culturegraph.metamorph.core.functions.Constant
 count org.culturegraph.metamorph.core.functions.Count
 buffer org.culturegraph.metamorph.core.functions.Buffer
-get-name org.culturegraph.metamorph.core.functions.GetName
+switch-name-value org.culturegraph.metamorph.core.functions.SwitchNameValue
 unique org.culturegraph.metamorph.core.functions.Unique
 script org.culturegraph.metamorph.core.functions.Script
 setreplace org.culturegraph.metamorph.core.functions.SetReplace
